
   - Do not use /dev/srandom on OpenBSD.  [also in 1.8.2]

   - Fix test suite failure on systems with large pages. [#3351]
     [also in 1.8.2]

   - Fix test suite to not use mmap on Windows.  [also in 1.8.2]

   - Fix fatal out of secure memory status in the s-expression parser
     on heavy loaded systems.  [also in 1.8.2]

 * Interface changes relative to the 1.8.0 release:
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   gcry_mpi_get_ui                 NEW function.
   GCRYCTL_AUTO_EXPAND_SECMEM      NEW control code.

 * Release dates of 1.8.x versions:
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   Version 1.8.2 (2017-12-13)
   Version 1.8.3 (2018-06-13)
   Version 1.8.4 (2018-10-26)


Noteworthy changes in version 1.8.1 (2017-08-27)  [C22/A2/R1]
------------------------------------------------

 * Bug fixes:

   - Mitigate a local side-channel attack on Curve25519 dubbed "May
     the Fourth be With You".  [CVE-2017-0379] [also in 1.7.9]

   - Add more extra bytes to the pool after reading a seed file.

   - Add the OID SHA384WithECDSA from RFC-7427 to SHA-384.

   - Fix build problems with the Jitter RNG

   - Fix assembler code build problems on Rasbian (ARMv8/AArch32-CE).


Noteworthy changes in version 1.8.0 (2017-07-18)  [C22/A2/R0]
------------------------------------------------

 * New interfaces:

   - New cipher mode XTS

   - New hash function Blake-2

   - New function gcry_mpi_point_copy.

   - New function gcry_get_config.

   - GCRYCTL_REINIT_SYSCALL_CLAMP allows to init nPth after Libgcrypt.

   - New global configuration file /etc/gcrypt/random.conf.

 * Extended interfaces:

   - GCRYCTL_PRINT_CONFIG does now also print build information for
     libgpg-error and the used compiler version.

   - GCRY_CIPHER_MODE_CFB8 is now supported.

   - Add Stribog OIDs.  [also in 1.7.4]

 * Performance:

   - A jitter based entropy collector is now used in addition to the
     other entropy collectors.
